enforce java 8 compatibility